--- a/scr/stylesheets/grid.css
+++ b/scr/stylesheets/grid.css
@@ -1,5 +1,5 @@
 canvas {
-  border: 2px solid black;
-  background-color: grey;
+  /* border: 2px solid black; */
+  /* background-color: grey; */
   margin: 10px;
 }
