--- a/scr/stylesheets/main.css
+++ b/scr/stylesheets/main.css
@@ -4,24 +4,46 @@
 
 #app {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: center;
   height: 100vh;
-  background-color: rgb(225, 189, 91);
+  /* background-color: rgb(225, 189, 91); */
   font-family: 'Sulphur Point', sans-serif;
+  /* z-index: 2; */
+}
+
+#video {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%; 
+  min-height: 100%;
+  opacity: 0.5;
+  z-index: -2;
+}
+
+#main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  margin: 20px;
+  /* height: 100%; */
 }
 
 h1 {
+  width: 100%;
   font-size: 30px;
   font-weight: bold;
   margin: 20px;
+  text-align: center;
 }
 
 #buttons {
-  width: 30%;
+  width: 100%;
   display: flex;
-  margin: auto;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 #reset, #scores {
@@ -46,8 +68,13 @@ h1 {
 }
 
 #instructions {
-  width: 60%;
+  width: 20%;
+  height: 100%;
   font-size: 18px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 20px;
 }
 
 #title {
