--- a/scr/stylesheets/main.css
+++ b/scr/stylesheets/main.css
@@ -4,12 +4,9 @@
 
 #app {
   display: flex;
-  /* flex-direction: column; */
   align-items: center;
   height: 100vh;
-  /* background-color: rgb(225, 189, 91); */
-  font-family: 'Sulphur Point', sans-serif;
-  /* z-index: 2; */
+  font-family: 'Sulphur Point', sans-serif;\
 }
 
 #video {
@@ -29,7 +26,7 @@
   align-items: center;
   width: 50%;
   margin: 20px;
-  /* height: 100%; */
+  height: 100%;
 }
 
 h1 {
