--- a/scr/stylesheets/modal.css
+++ b/scr/stylesheets/modal.css
@@ -8,14 +8,35 @@
   width: 100%;
   height: 100%;
   overflow: auto; 
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0, 0, 0, 0.75);
 }
 
 #modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: auto;
+    padding: 20px;
+    width: 500px;
+    height: 300px;
+    text-align: center;
+    background-color: black;
+    box-shadow: 5px 10px 8px greenyellow;
+}
+
+#modal-content h3 {
+    font-size: 50px;
+    color: greenyellow;
+    font-weight: bold;
+}
+
+button#modal-reset {
+    height: 50px;
+    width: 300px;
+    font-size: 25px;
+    border-radius: 8px;
+    background-color: greenyellow;
+    border: 1px solid black;
+    box-shadow: 3px 2px 8px #888888;
 }
