--- a/scr/stylesheets/main.css
+++ b/scr/stylesheets/main.css
@@ -31,10 +31,12 @@
 
 h1 {
   width: 100%;
-  font-size: 30px;
+  font-size: 50px;
   font-weight: bold;
   margin: 20px;
   text-align: center;
+  color: black;
+  text-shadow: 3px 0 greenyellow, 0 -1px greenyellow;
 }
 
 #buttons {
@@ -54,6 +56,7 @@ h1 {
   border-radius: 8px;
   border: 1px solid;
   box-shadow: 5px 10px 8px #888888;
+  background-color: greenyellow;
 }
 
 #reset {
@@ -65,7 +68,7 @@ h1 {
 }
 
 #instructions {
-  width: 20%;
+  width: 35%;
   height: 100%;
   font-size: 18px;
   display: flex;
