Position icons on grid

--- a/scr/stylesheets/main.css
+++ b/scr/stylesheets/main.css
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
   height: 100vh;
-  font-family: 'Sulphur Point', sans-serif;\
+  font-family: 'Sulphur Point', sans-serif;
 }
 
 #video {
