--- a/scr/stylesheets/main.css
+++ b/scr/stylesheets/main.css
@@ -5,6 +5,7 @@
 #app {
   display: flex;
   align-items: center;
+  justify-content: space-evenly;
   height: 100vh;
   font-family: 'Sulphur Point', sans-serif;
 }
@@ -24,7 +25,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 50%;
+  width: 40%;
   margin: 20px;
   height: 100%;
 }
@@ -69,12 +70,16 @@ h1 {
 
 #instructions {
   width: 35%;
-  height: 100%;
+  height: 50%;
   font-size: 18px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin: 20px;
+  background-color: greenyellow;
+  opacity: 0.8;
+  margin-top: 60px;
+  padding: 20px;
 }
 
 #title {
