--- a/scr/stylesheets/modal.css
+++ b/scr/stylesheets/modal.css
@@ -2,7 +2,7 @@
   display: none;
   position: fixed;
   z-index: 1;
-  padding-top: 100px;
+  /* padding-top: 100px; */
   left: 0;
   top: 0;
   width: 100%;
@@ -17,6 +17,7 @@
     justify-content: space-evenly;
     align-items: center;
     margin: auto;
+    margin-top: 20%;
     padding: 20px;
     width: 500px;
     height: 300px;
